// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SwitchSized can be rendered on an android switch is off 1`] = `
<AndroidSwitch
  accessibilityRole="switch"
  enabled={true}
  on={false}
  onChange={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      null,
      null,
      Object {
        "height": 46.690000000000005,
        "marginVertical": 6.67,
      },
    ]
  }
  thumbTintColor="#eaeaea"
  trackColorForFalse="#64715599"
  trackColorForTrue="#5c8a5199"
  trackTintColor="#64715599"
/>
`;

exports[`SwitchSized can be rendered on an android where switch is on 1`] = `
<AndroidSwitch
  accessibilityRole="switch"
  enabled={true}
  on={true}
  onChange={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      null,
      null,
      Object {
        "height": 46.690000000000005,
        "marginVertical": 6.67,
      },
    ]
  }
  thumbTintColor="#4b7142"
  trackColorForFalse="#64715599"
  trackColorForTrue="#5c8a5199"
  trackTintColor="#5c8a5199"
/>
`;

exports[`SwitchSized can be rendered on an iPhone with reduced size switches where switch is off 1`] = `
<RCTSwitch
  accessibilityRole="switch"
  onChange={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  onTintColor="#5c8a5199"
  style={
    Array [
      Object {
        "height": 31,
        "width": 51,
      },
      Array [
        null,
        null,
        null,
      ],
    ]
  }
  thumbTintColor={null}
  tintColor={null}
  value={false}
/>
`;

exports[`SwitchSized can be rendered on an iPhone with reduced size switches where switch is on 1`] = `
<RCTSwitch
  accessibilityRole="switch"
  onChange={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  onTintColor="#5c8a5199"
  style={
    Array [
      Object {
        "height": 31,
        "width": 51,
      },
      Array [
        null,
        null,
        null,
      ],
    ]
  }
  thumbTintColor={null}
  tintColor={null}
  value={true}
/>
`;

exports[`SwitchSized can be rendered on iPad with regular switch where switch is off 1`] = `
<AndroidSwitch
  accessibilityRole="switch"
  enabled={true}
  on={false}
  onChange={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      null,
      null,
      Object {
        "height": 46.690000000000005,
        "marginVertical": 6.67,
      },
    ]
  }
  thumbTintColor="#eaeaea"
  trackColorForFalse="#64715599"
  trackColorForTrue="#5c8a5199"
  trackTintColor="#64715599"
/>
`;

exports[`SwitchSized can be rendered on iPad with regular switch where switch is on 1`] = `
<AndroidSwitch
  accessibilityRole="switch"
  enabled={true}
  on={true}
  onChange={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      null,
      null,
      Object {
        "height": 46.690000000000005,
        "marginVertical": 6.67,
      },
    ]
  }
  thumbTintColor="#4b7142"
  trackColorForFalse="#64715599"
  trackColorForTrue="#5c8a5199"
  trackTintColor="#5c8a5199"
/>
`;
